--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./views/index.html"
   },
   "author": "Christopher Mullins and Merissa Bridgeman",
   "license": "ISC",
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/CL-mullins/chill-app#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.2"
+    "express-handlebars": "^5.3.2",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {}
 }
