--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
